2008-04-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log): Unescape the Gnome VFS uri before storing
	it in the global variable last_save_log_dir (N80933).

	* utils/maemo-select-menu-location-main.c (dialog_exposed):
	Restore the gdk_window_raise statement, which was removed by
	mistake with revision 1109 (N84021).

2008-04-28  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.10

	* src/hildon-application-manager-config.cc (read_conf): Do not
	abort when a file can not be read.  Just reset the corresponding
	configuration.

2008-04-24  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (search_packages_reply): Call sort_all_packages so
	that the search results are sorted as well (N83776).

2008-04-23  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc (make_global_package_list) : Code cleanup.
	(package_selected_toggled_callback) : Deleted two lines that
	caused warnings.

	* package_info_cell_renderer.c
	(package_info_cell_renderer_set_property) : Use g_strstrip() on
	the 'description' string. Use g_object_ref instead of duplicating
	the pixbuf.
	(package_info_cell_renderer_get_size) : Entries without a
	'description' field won't be expanded.
	(package_info_cell_renderer_render) : Entries without a
	'description' field won't be expanded.

	* main.cc (install_from_file_flow) : Fix a CRITICAL warning
	because we called gnome_vfs_get_uri_from_local_path with an URI
	instead of an absolute path.

2008-04-23  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/package-info-cell-renderer.h,
	src/package-info-cell-renderer.c: New.
	* src/Makefile.am: Compile them.

	* src/util.cc [CAIRO_CELL_RENDERER]: Use the new
	PackageInfoCellRenderer instead of the nested cell renderers from
	Modest.  This gives much better performance (N84324).

2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.9

	* src/update-notifier.c (update_notifier_finalize): Do not call